# gai-stt-svr

./: pyproject.toml
src/gai/stt/server/: gai_stt.py
src/gai/stt/server/api/: gai_stt_router.obsolete.py  main.py
tests/integrationtest/: gai-stt.ipynb
